# acn

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
acn/: __init__.py  memory.py  metrics.py  model.py  plasticity.py  trainer.py  transforms.py  visualization.py
apps/api/: README.md
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/worker/: README.md
configs/continual/: cifar10_domain_shift_example.json  fashion_mnist_demo.json  split_cifar100_example.json
configs/demo/: acn_demo_mode.json
configs/experiments/: acn_e2e_reproducible.json  acn_real_vertical_slice.json  research_benchmark.json
docs/: 01_product_vision.md  02_system_architecture.md  03_ml_architecture.md  04_roadmap.md  05_lab_protocols.md  06_demo_protocols.md  07_datasets.md  08_hardware_strategy.md  09_repository_structure.md  10_codex_prompts.md  11_future_video_support.md  12_final_positioning.md  13_orchestration.md  14_dashboard_frontend.md  15_architecture_audit.md  16_e2e_experiment_pipeline.md  17_research_evaluation.md  18_demo_mode.md  19_testing_architecture.md  20_sync_execution_model.md  21_artifact_lifecycle.md  22_transaction_and_integrity_model.md  23_real_vertical_slice.md  24_system_maturity_matrix.md  25_development_rules.md  26_visual_demo_architecture.md  27_runtime_stack.md  28_guided_demo_script.md  29_inference_showcase.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_MAP.md  LLM_REVIEW_PACKAGE.md  README.md
infra/docker/: mlflow.Dockerfile  python.Dockerfile  web.Dockerfile
scripts/: train_fashion_mnist.py
scripts/citadel/: simulate_citadel.py
scripts/continual/: fashion_mnist_demo_scenario.py
scripts/controller/: compare_controllers.py  evaluate_neural_policy.py  simulate_rule_based_controller.py
scripts/demo/: generate_demo_assets.py
scripts/experiments/: run_e2e_experiment.py  run_real_vertical_slice.py  run_research_benchmark.py
scripts/orchestration/: example_experiment_lifecycle.py
tests/api/: test_dashboard_api.py  test_health.py  test_visual_demo_api.py
tests/citadel/: conftest.py  (+1 more)
(+62 files in other folders)
